--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 　　<html>
 　　<head>
-　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　　　　<title>{{ page.title }}</title>
+		<link rel="stylesheet" href="/css/Styles.css">
+		<link rel="stylesheet" href="/css/Index-style.css">
+　　　　	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+　　　　	<title>{{ page.title }}</title>
 　　</head>
 　　<body>
 
