what did i miss?

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 　　　　	<title>{{ page.title }}</title>
 　　</head>
 　　<body>
-
-　　　　{{ content }}
-
+		<div id="container">
+	　　　　{{ content }}
+		</div>
 　　</body>
 　　</html>
