--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 　　<head>
 		<link rel="stylesheet" href="/css/Styles.css">
 		<link rel="stylesheet" href="/css/Index-style.css">
+		<link rel="stylesheet" href="/css/syntax.css">
 　　　　	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 　　　　	<title>{{ page.title }}</title>
 　　</head>
