use bootstrap framework

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 　　<html>
 　　<head>
-		<link rel="stylesheet" href="/css/Styles.css">
-		<link rel="stylesheet" href="/css/Index-style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" href="/css/syntax.css">
 　　　　	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 　　　　	<title>{{ page.title }}</title>
