--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,43 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		
+		<title>Material Design Bootstrap</title>
+		{% include blog-head.html %}
 
-<head>
-    
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    
-    <title>Material Design Bootstrap</title>
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
-
-    <!-- Your custom styles (optional) -->
-    <link href="css/style.css" rel="stylesheet">
-
-　　　　<title>{{ page.title }}</title>
-　　　　
-　　</head>
-　　<body>
+		
+		<title>{{ page.title }}</title>
+		
+	</head>
+	<body>
+		<header>
+			
+			<!--Navbar-->
+			<nav class="navbar navbar-dark bg-primary">
+				<!-- Collapse button-->
+				<button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx2">
+				<i class="fa fa-bars"></i>
+				</button>
+				<div class="container">
+					<!--Collapse content-->
+					<div class="collapse navbar-toggleable-xs" id="collapseEx2">
+						<!--Navbar Brand-->
+						<a class="navbar-brand" href="#">Navbar</a>
+						<!--Links-->
+						<ul class="nav navbar-nav">
+							<li class="nav-item active">
+								<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Features</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Pricing</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">About</a>
+							</li>
+						</ul>
+						<!--Search form-->
+						<form class="form-inline">
+							<input class="form-control" type="text" placeholder="Search">
+						</form>
+					</div>
+					<!--/.Collapse content-->
+				</div>
+			</nav>
+			<!--/.Navbar-->
+		</header>
+		<main>
 		<div id="container">
-	　　　　{{ content }}
+			{{ content }}
+		</div>
+		</main>
+		<footer>
+		</footer>
+		<div id="container">
+			
 		</div>
 		<!-- JQuery -->
-    <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
-
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/tether.min.js"></script>
-
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
-　　</body>
-　　</html>
+		<script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
+		<!-- Bootstrap tooltips -->
+		<script type="text/javascript" src="js/tether.min.js"></script>
+		<!-- Bootstrap core JavaScript -->
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<!-- MDB core JavaScript -->
+		<script type="text/javascript" src="js/mdb.min.js"></script>
+	</body>
+</html>
