--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,74 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		
-		<title>Material Design Bootstrap</title>
-		{% include blog-head.html %}
-
-		
-		<title>{{ page.title }}</title>
-		
-	</head>
-	<body>
-		<header>
-			
-			<!--Navbar-->
-			<nav class="navbar navbar-dark bg-primary">
-				<!-- Collapse button-->
-				<button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapseEx2">
-				<i class="fa fa-bars"></i>
-				</button>
-				<div class="container">
-					<!--Collapse content-->
-					<div class="collapse navbar-toggleable-xs" id="collapseEx2">
-						<!--Navbar Brand-->
-						<a class="navbar-brand" href="#">Navbar</a>
-						<!--Links-->
-						<ul class="nav navbar-nav">
-							<li class="nav-item active">
-								<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Features</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Pricing</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">About</a>
-							</li>
-						</ul>
-						<!--Search form-->
-						<form class="form-inline">
-							<input class="form-control" type="text" placeholder="Search">
-						</form>
-					</div>
-					<!--/.Collapse content-->
-				</div>
-			</nav>
-			<!--/.Navbar-->
-		</header>
-		<main>
-		<div id="container">
-			{{ content }}
-		</div>
-		</main>
-		<footer>
-		</footer>
-		<div id="container">
-			
-		</div>
-		<!-- JQuery -->
-		<script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
-		<!-- Bootstrap tooltips -->
-		<script type="text/javascript" src="js/tether.min.js"></script>
-		<!-- Bootstrap core JavaScript -->
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<!-- MDB core JavaScript -->
-		<script type="text/javascript" src="js/mdb.min.js"></script>
-	</body>
+    {% include blog-head.html %}
+    <body>
+        <header>
+        </header>
+        <main>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 bootcards-cards">
+                    <!-- <div class="container well"> -->
+                    <div class="row text-xs-center WOW flipInX">
+                        <h1 class="h1-responsive">
+                            {{ page.title }}
+                        </h1>
+                        <p>
+                            {% if page.date %}{{ page.date | date_to_string }}
+                                {% endif %}
+                        </p>
+                    </div>
+                    <hr class="extra-margins"/>
+                    <div class="row">
+                        {{ content }}
+                    </div>
+                    <!-- </div> -->
+                </div>
+                <div class="col-md-2 col-md-offset-0 side-bar bootcards-list">
+                    {% include blog-side.html %}
+                </div>
+            </div>
+        </main>
+        {% include blog-foot.html %}
+    </body>
 </html>
