new daemon material design

--- a/_includes/blog-foot.html
+++ b/_includes/blog-foot.html
@@ -166,5 +166,7 @@
     });
   })(window, window.document);
 </script>
+<script src="/js/base.min.js"></script>
+  <script src="/js/project.min.js"></script>
 <!--         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js">
     </script> -->
