--- a/_includes/blog-head.html
+++ b/_includes/blog-head.html
@@ -17,7 +17,9 @@
 	    <!-- Bootstrap core CSS -->
 	    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
 	    <!-- Material Design Bootstrap -->
-	    <link href="/css/mdb.min.css" rel="stylesheet"/>
+	    <!-- <link href="/css/mdb.min.css" rel="stylesheet"/> -->
+	    <link href="/css/base.min.css" rel="stylesheet">
+		<link href="/css/project.min.css" rel="stylesheet">
 	    <!-- Your custom styles (optional) -->
 	   
 	    <!-- <link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/styles/default.min.css" rel="stylesheet"/> -->
