--- a/_includes/blog-side.html
+++ b/_includes/blog-side.html
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="card text-xs-center">
-            <!-- <div class="card-header" style="background-image: url('/image/front_page.png');"> -->
+        <!-- <div class="card text-xs-center">
             <div class="card-header">
                 Author
             </div>
@@ -15,7 +14,9 @@
                     Just a developer
                 </p>
             </div>
-        </div>
+        </div> -->
+        <div class="github-card" data-github="inizio" data-width="400" data-height="" data-theme="medium"></div>
+        <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
     </div>
 </div>
 <div class="row">
