--- a/_includes/blog-side.html
+++ b/_includes/blog-side.html
@@ -15,7 +15,7 @@
                 </p>
             </div>
         </div> -->
-        <div class="github-card" data-github="inizio" data-width="400" data-height="" data-theme="medium"></div>
+        <div class="github-card" data-github="inizio" data-width="400" data-height="" data-theme="default"></div>
         <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
     </div>
 </div>
