--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,14 @@
 } */
 
 html *{
-    font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+  font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 }
 
-h1 {
-	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
 }
-h3 {
-	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	font-size: 14px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 15.4px;
-}
+
 p {
-	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	font-size: 14px;
 	font-style: normal;
 	font-variant: normal;
@@ -33,7 +20,6 @@ p {
 	line-height: 20px;
 }
 blockquote {
-	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	font-size: 21px;
 	font-style: normal;
 	font-variant: normal;
@@ -41,7 +27,6 @@ blockquote {
 	line-height: 30px;
 }
 pre {
-	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	font-size: 13px;
 	font-style: normal;
 	font-variant: normal;
@@ -74,10 +59,10 @@ text-indent: 5em;
   text-overflow: ellipsis;
 } */
 
-* {margin:0;padding:0;} 
+* {margin:0;padding:0;}
 
-/* must declare 0 margins on everything, also for main layout components use padding, not 
-vertical margins (top and bottom) to add spacing, else those margins get added to total height 
+/* must declare 0 margins on everything, also for main layout components use padding, not
+vertical margins (top and bottom) to add spacing, else those margins get added to total height
 and your footer gets pushed down a bit more, creating vertical scroll bars in the browser */
 
 html, body {height: 100%;}
@@ -104,7 +89,7 @@ main {
 #footer {position: relative;
 	margin-top: -180px; /* negative value of footer height */
 	height: 180px;
-	clear:both;} 
+	clear:both;}
 
 /*Opera Fix*/
 body:before {/* thanks to Maleika (Kohoutec)*/
@@ -157,7 +142,7 @@ You also need to include this conditional style in the <head> of your HTML file 
     margin-bottom: 25px;
     margin-left: 0px;
     position: relative;
-    
+
 }
 
 .post-item .post-inner {
