--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -64,6 +64,17 @@ h6 {
   font-family: "Alegreya Sans SC";
 }
 
+.search-bar {
+  text-align: center;
+  border:none;
+  background-color: $bgColor;
+}
+
+.search-bar:hover, .search-bar:focus {
+  background-color: lighten($bgColor, 15);
+  text-decoration: none;
+}
+
 a {
   text-decoration: none;
   color: $linkColor;
@@ -114,7 +125,7 @@ a {
   display: inline-block;
   font-size: $fontSize - 2;
   color: $metaColor;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid $primaryColor;
   padding-top: 2px;
   cursor:default;
 }
