--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -68,7 +68,7 @@ h6 {
   text-align: center;
   border:none;
   background-color: $bgColor;
-  transition: 0.4s;
+  transition: background-color 0.4s;
 }
 
 .search-bar:hover, .search-bar:focus, .search-bar:active {
@@ -93,6 +93,90 @@ a {
     text-transform: uppercase;
     color: $textColor;
   }
+}
+
+.btn {
+  cursor: default;
+  display: inline-block;
+  border: 0;
+  line-height: 24px;
+  padding: 0.3em 0.3em;
+  margin: 0.5em;
+  margin-bottom: 1em;
+  outline: none;
+  text-decoration: none;
+  color: #666;
+  transition: background-color 0.2s;
+
+  span {
+    margin-left: 0.2em;
+    margin-right: 25px;
+  }
+
+  &:hover, &:active, &:focus {
+    background-color: darken($bgColor,1);
+    .arrow {
+      background-color: darken($bgColor,1);
+    }
+  }
+}
+
+
+//
+// CSS Icons
+// -----------------------------------------
+
+.icon {
+  display: inline-block;
+}
+
+// arrow-left
+.arrow-left.icon {
+  color: #000;
+  position: absolute;
+  margin-left: 3px;
+  margin-top: 10px;
+  width: 16px;
+  height: 1px;
+  background-color: darken($primaryColor, 20);
+}
+
+.arrow-left.icon:before {
+  content: '';
+  position: absolute;
+  left: 1px;
+  top: -5px;
+  width: 10px;
+  height: 10px;
+  border-top: solid 1px darken($primaryColor, 20);
+  border-right: solid 1px darken($primaryColor, 20);
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
+}
+
+
+// arrow-right
+.arrow-right.icon {
+  color: #000;
+  position: absolute;
+  margin-left: 2px;
+  margin-top: 10px;
+  width: 16px;
+  height: 1px;
+  background-color: darken($primaryColor, 20);
+}
+
+.arrow-right.icon:before {
+  content: '';
+  position: absolute;
+  right: 1px;
+  top: -5px;
+  width: 10px;
+  height: 10px;
+  border-top: solid 1px darken($primaryColor, 20);
+  border-right: solid 1px darken($primaryColor, 20);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 //
