--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -62,6 +62,7 @@ h6 {
   cursor: default;
   font-size: 50px;
   font-family: $titleFontFamily, $fontFamily;
+  max-width: 100%;
 }
 
 .search-bar {
@@ -112,7 +113,7 @@ a {
   transition: background-color 0.2s;
 
   span {
-    margin-left: 0.2em;
+    margin-left: 7px;
     margin-right: 25px;
   }
 
