--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -144,6 +144,148 @@ a {
 }
 
 //
+// List View
+// -----------------------------------------
+
+.list-view {
+  margin: 0 20px;
+  ol,
+  ul {
+    padding: 0;
+    list-style: none;
+  }
+}
+
+.list-item {
+  min-height: 160px;
+  max-height: 160px;
+
+  margin: 0 auto;
+  width: 75%;
+  background-color: white;
+  text-align: center;
+  // border: 1px 1px 0px 0px $primaryColor solid;
+  // padding: 20px;
+  // padding-bottom: 20px;
+  position: relative;
+  margin-bottom: 40px;
+  box-shadow: 0px 0px 2px 2px rgba(150,150,150,0.1);
+  transition: 0.2s;
+  cursor: pointer;
+  &:hover {
+    box-shadow: 0px 0px 2px 2px rgba(100,100,100,0.15);
+    .item-title {
+      color: $linkColor;
+    }
+    .item-property {
+      max-height: 0px;
+      transition: max-height 0.1s ease-out;
+
+    }
+    .item-summary {
+      overflow: hidden;
+      max-height: 80px;
+      transition: max-height 0.1s ease-in;
+    }
+  }
+}
+
+.item-property {
+  overflow: hidden;
+  transition: max-height 0.1s ease-in;
+  max-height: 40px;
+  margin: 0 5px;
+  text-align: left;
+  // border-bottom: 1px solid $primaryColor;
+  .item-property__tag {
+    font-size: 85%;
+    display: inline-block;
+    margin-right: 7px;
+    &:before{
+      content:  '•';
+      color: darken($primaryColor, 20);
+    }
+  }
+  .item-property__date {
+    float: right;
+    text-align: right;
+    display: inline-block;
+    font-size: $fontSize - 2;
+    color: $metaColor;
+    // border-left: 1px dotted $primaryColor;
+    padding-top: 2px;
+    cursor:default;
+  }
+}
+
+.item-title {
+  display: inline-block;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  font-size: $fontSize + 6;
+  color: $textColor;
+  &:hover {
+    color: $linkColor;
+  }
+}
+
+.item-summary {
+  text-align: left;
+  max-height: 0;
+  padding:0 10px;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+//
+// Post View
+// -----------------------------------------
+
+.post-view {
+  margin: 0 40px 50px;
+}
+
+.post-title {
+  line-height: 1;
+  margin-bottom: 50px;
+}
+
+// when smaller than tablet
+@media (max-width: 767px) {
+  .post-title {
+    font-size: 1.5em;
+  }
+}
+
+.post-date {
+  float: right;
+  font-size: $fontSize - 2;
+  font-weight: 400;
+  line-height: 2;
+  color: $metaColor;
+}
+
+pre {
+  background: $codeBgColor !important;
+  padding: 16px;
+  overflow-x: auto;
+  white-space: pre;
+}
+
+code {
+  background: $codeBgColor;
+  font-family: $monospaceFontFamily !important;
+  padding: 3px 5px;
+  border-radius: 4px;
+}
+
+blockquote {
+  margin: 0;
+  padding: 0 16px;
+  border-left: 4px solid #ddd;
+}
+
+//
 // CSS Icons
 // -----------------------------------------
 
@@ -198,102 +340,6 @@ a {
   border-right: solid 1px darken($primaryColor, 20);
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
-}
-
-//
-// List View
-// -----------------------------------------
-
-.list-view {
-  margin: 0 20px;
-  ol,
-  ul {
-    padding: 0;
-    list-style: none;
-  }
-}
-
-.list-item {
-  border-left: 1px $primaryColor solid;
-  border-radius: 0 5px 5px 0;
-  padding: 20px;
-  position: relative;
-  margin-bottom: 50px;
-  // box-shadow: 1px 0px 1px 1px rgba(100,100,100,0.1);
-  transition: 0.2s;
-  &:hover {
-    // box-shadow: 1px 0px 2px 1px rgba(100,100,100,0.1);
-    .item-title {
-      color: $linkColor;
-    }
-  }
-}
-
-.item-title {
-  display: inline-block;
-  margin-bottom: 10px;
-  font-size: $fontSize + 6;
-  color: $textColor;
-  &:hover {
-    color: $linkColor;
-  }
-}
-
-.item-date {
-  display: inline-block;
-  font-size: $fontSize - 2;
-  color: $metaColor;
-  border-top: 1px dotted $primaryColor;
-  padding-top: 2px;
-  cursor:default;
-}
-
-//
-// Post View
-// -----------------------------------------
-
-.post-view {
-  margin: 0 40px 50px;
-}
-
-.post-title {
-  line-height: 1;
-  margin-bottom: 50px;
-}
-
-// when smaller than tablet
-@media (max-width: 767px) {
-  .post-title {
-    font-size: 1.5em;
-  }
-}
-
-.post-date {
-  float: right;
-  font-size: $fontSize - 2;
-  font-weight: 400;
-  line-height: 2;
-  color: $metaColor;
-}
-
-pre {
-  background: $codeBgColor !important;
-  padding: 16px;
-  overflow-x: auto;
-  white-space: pre;
-}
-
-code {
-  background: $codeBgColor;
-  font-family: $monospaceFontFamily !important;
-  padding: 3px 5px;
-  border-radius: 4px;
-}
-
-blockquote {
-  margin: 0;
-  padding: 0 16px;
-  border-left: 4px solid #ddd;
 }
 
 //
