--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -164,7 +164,7 @@ a {
 
   margin: 0 auto;
   width: 75%;
-  background-color: white;
+  background-color: $bgColor;
   text-align: center;
   // border: 1px 1px 0px 0px $primaryColor solid;
   // padding: 20px;
@@ -176,20 +176,21 @@ a {
   cursor: pointer;
   &:hover {
     box-shadow: 0px 0px 2px 2px rgba(100,100,100,0.15);
-    .item-title {
-      color: $linkColor;
-    }
-    .item-property {
-      max-height: 0px;
-      transition: max-height 0.1s ease-out;
+    // .item-title {
+    //   color: $linkColor;
+    // }
+    // .item-property {
+    //   max-height: 0px;
+    //   transition: max-height 0.1s ease-out;
 
-    }
-    .item-desc {
-      display: block;
-      overflow: hidden;
-      max-height: 80px;
-      transition: max-height 0.1s ease-in;
-    }
+    // }
+    // .item-desc {
+    //   text-align: center;
+    //   display: block;
+    //   overflow: hidden;
+    //   max-height: 80px;
+    //   transition: max-height 0.1s ease-in;
+    // }
   }
 }
 
