--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,6 +5,10 @@
 // variable
 // -----------------------------------------
 
+$break-small: 320px;
+$break-medium: 768px;
+$break-large: 1024px;
+
 $fontSize: 16px;
 
 $titleFontFamily: tofinoThin, "Alegreya Sans SC";
@@ -22,6 +26,17 @@ $codeBgColor: #f1f1f1;
 //
 // common
 // -----------------------------------------
+
+// Remove selection border on mobiles
+* {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 
 *::-moz-selection,
 *::selection {
@@ -198,7 +213,7 @@ a {
     -webkit-box-sizing: border-box;
 }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: $break-small) {
     .masonry {
         -moz-column-count: 1;
         -webkit-column-count: 1;
@@ -206,7 +221,7 @@ a {
     }
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: $break-medium) {
     .masonry {
         -moz-column-count: 2;
         -webkit-column-count: 2;
@@ -214,15 +229,7 @@ a {
     }
 }
 
-@media only screen and (min-width: 900px) {
-    .masonry {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
-    }
-}
-
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: $break-large) {
     .masonry {
         -moz-column-count: 3;
         -webkit-column-count: 3;
@@ -335,6 +342,9 @@ a {
   margin: 0 100px;
   background-color: lighten($bgColor, 1);
   padding: 30px 100px;
+  @media screen and (max-width: $break-medium) {
+    margin: 0;
+  }
 }
 
 .post-title {
