--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -21,7 +21,7 @@ $bgColor: rgb(250,250,250);
 $textColor: #555;
 $linkColor: darken($primaryColor, 20);
 $metaColor: #888;
-$codeBgColor: #f1f1f1;
+$codeBgColor: #f9f9f9;
 
 //
 // common
@@ -373,7 +373,8 @@ pre {
   padding: 10px 30px;
   margin: 20px;
   // padding: 16px;
-  border-left: 2px dotted $primaryColor;
+  border-left: 1px dashed $primaryColor;
+  border-radius: 15px;
   overflow-x: hidden;
   white-space: pre;
 }
