--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,6 @@
 @import '~normalize.css';
-@import '~prismjs/themes/prism-okaidia.css';
-// @import '../vendor/prism.min.css';
+// @import '~prismjs/themes/prism-okaidia.css';
+@import '../vendor/prism.min.css';
 // @import '~prismjs/plugins/line-numbers/prism-line-numbers.css';
 @import './flexboxgrid.min.css';
 @import url('//fonts.googleapis.com/css?family=Alegreya+Sans+SC:100|Lato:200');
@@ -113,13 +113,13 @@ h1 {
 
 code {
   padding: 5px;
-  font-size: 12.5px;
   color: #f8f8f2;
 }
 
 code,
 // code[class*="language-"],
 pre[class*="language-"] {
+  font-size: 12.5px;
 //   // font-size: 10px;
 //   font-weight: 300;
 //   tab-size: 2;
