--- a/src/styles/settings/_type.scss
+++ b/src/styles/settings/_type.scss
@@ -1,4 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Questrial|Titillium+Web:300');
-$font-heading: 'Titillium Web', 'san-serif';
+$font-heading: 'Questrial', 'Titillium Web', 'san-serif';
 $font-paragraph: 'Questrial', 'san-serif';
 $font-code: 'Input Mono';
