--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 // Base
 @import 'base/initialize';
 @import 'base/type';
+@import 'base/color';
 // Objects
 @import 'objects/container';
 @import 'objects/grid';
@@ -34,3 +35,8 @@
 @import 'utilities/text';
 @import 'utilities/transform';
 @import 'utilities/weight';
+// Components
+@import 'components/app-header';
+@import 'components/button';
+@import 'components/list';
+@import 'components/searchbar';
