--- a/src/styles/base/_type.scss
+++ b/src/styles/base/_type.scss
@@ -1,9 +1,11 @@
 body {
   font-family: $font-paragraph;
-  color: $color-grey;
+  font-size: 16px;
+  line-height: 1.7;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-heading;
-  color: $color-black;
+  font-weight: normal;
+  font-size: 125%;
 }
