--- a/src/styles/base/_type.scss
+++ b/src/styles/base/_type.scss
@@ -5,7 +5,12 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  margin-top: 10px;
   font-family: $font-heading;
   font-weight: normal;
   font-size: 125%;
+}
+
+li {
+  line-height: 2;
 }
