--- a/src/styles/settings/_type.scss
+++ b/src/styles/settings/_type.scss
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Questrial|Titillium+Web:300);
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
-$font-heading: 'Questrial', 'Titillium Web', 'san-serif';
+$font-heading: 'Poiret One', 'Titillium Web', 'san-serif';
 $font-paragraph: 'Questrial', 'san-serif';
 $font-code: 'Input Mono';
