styling for code blocks Changes: - set font family to input mono - set background

--- a/src/styles/base/_color.scss
+++ b/src/styles/base/_color.scss
@@ -12,3 +12,10 @@ a {
     color: $color-black;
   }
 }
+
+pre.code {
+  background-color: rgba(0, 0, 0, 0.05);
+  color: rgba(0, 0, 0, 0.8);
+  border-radius: 8px;
+  padding: 15px;
+}
