--- a/src/styles/settings/_color.scss
+++ b/src/styles/settings/_color.scss
@@ -2,3 +2,5 @@ $color-primary: green;
 $color-black: #000;
 $color-grey: #55585e;
 $color-text: $color-grey;
+$color-blue: blue;
+$color-darkblue: darkblue;
