--- a/src/styles/settings/_type.scss
+++ b/src/styles/settings/_type.scss
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Questrial|Titillium+Web:300);
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url(../../assets/InputMono-Regular.ttf);
 $font-heading: 'Poiret One', 'Titillium Web', 'san-serif';
 $font-paragraph: 'Questrial', 'san-serif';
-$font-code: 'Input Mono';
+$font-code: 'Input Mono', 'Monospace';
