--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -1,10 +1,12 @@
 .c-list {
   min-height: 400px;
   overflow: auto;
-  // list-style-type: none;
+  list-style-type: none;
 }
 
-.c-list__item {}
+.c-list__item {
+  margin-top: 10px;
+}
 
 .c-list__item-date {
   font-size: 75%;
